<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uglyBackground">
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:background="@color/uglyHeader">
            <TextView></TextView>
            <TextView
                android:id="@+id/title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:text="@string/title_string"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/teamA_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamA_title_string"
                android:textSize="28sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>
            <TextView></TextView>
            <TextView
                android:id="@+id/teamB_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamB_title_string"
                android:textSize="28sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>
        </TableRow>
        <TableRow>
            <TextView></TextView>
            <TextView
                android:id="@+id/teamA_score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="28sp"
                android:background="@color/uglyTableRow"/>
            <TextView></TextView>
            <TextView
                android:id="@+id/teamB_score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="28sp"
                android:background="@color/uglyTableRow"/>
        </TableRow>
        <TableRow>
            <TextView></TextView>
            <Button
                android:id="@+id/increase_TeamA_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_string"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/uglyBackground"
                android:background="@drawable/button_border"/>
            <TextView></TextView>
            <Button
                android:id="@+id/increase_TeamB_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/uglyBackground"
                android:background="@drawable/button_border"/>
        </TableRow>
        <TableRow>
            <TextView></TextView>
            <Button
                android:id="@+id/decrease_TeamA_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_string"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/uglyBackground"
                android:background="@drawable/button_border"/>
            <TextView></TextView>
            <Button
                android:id="@+id/decrease_TeamB_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_string"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/uglyBackground"
                android:background="@drawable/button_border"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="10sp">
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:background="@color/uglyContent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Point Factor"
                android:textSize="22sp" />
            <RadioGroup android:id="@+id/scoreChngFactorGroup_RadioGroup"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chngFactor2RadioButton"
                    android:text="2 Points" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chngFactor4RadioButton"
                    android:text="4 Points" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chngFactor6RadioButton"
                    android:text="6 Points" />
            </RadioGroup>
            <TextView></TextView>
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/simpleImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2">
            </ImageView>
        </TableRow>
    </TableLayout>
</FrameLayout>
